fixed left alignment and left and right margins of elements on the index page

--- a/assets/css/index-style.css
+++ b/assets/css/index-style.css
@@ -56,7 +56,7 @@
     }
 }
 
-/*blurb scaling*/
+/*blurb scaling*
 @media screen and (min-width: 400px) {
     .projects-blurb{
         margin-left: 70px;
@@ -185,7 +185,7 @@
 /*END FONT SCALING*/
 
 .tag-line{
-    
+    white-space: normal;
 }
 
 .cursor{
@@ -391,11 +391,37 @@
     .project-listing-container{
         max-width: 350px;
     }
+    
+    .project-img-left{
+        margin-right: 5px;
+    }
+    
+    .project-img-middle{
+        margin-left: 5px;
+        margin-right: 5px;
+    }
+    
+    .project-img-right{
+        margin-left: 5px;
+    }
 }
 
 @media screen and (max-width: 1200px) {
     .project-listing-container{
         max-width: 300px;
+    }
+    
+    .project-img-left{
+        margin-right: 5px;
+    }
+    
+    .project-img-middle{
+        margin-left: 5px;
+        margin-right: 5px;
+    }
+    
+    .project-img-right{
+        margin-left: 5px;
     }
 }
 
@@ -423,15 +449,15 @@
         white-space: normal;
     }
     
-    .projects-container h1{
+    /*.projects-container h1{
         padding-left: 10px;
         padding-right: 10px;
-    }
+    }*/
     
     .project-listing-container{
         display: block;
-        padding-left: 10px;
-        padding-right: 10px;
+        /*padding-left: 10px;
+        padding-right: 10px;*/
         min-width: 100%;
     }
     
@@ -442,6 +468,14 @@
     
     .project-listing-container div img{
         min-width: 100%;
+        margin-left: 0;
+        margin-right: 0;
+        padding: 0;
+    }
+    
+    .project-listing-container div{
+        margin-left: 0;
+        margin-right: 0;
     }
 }
 
@@ -466,6 +500,8 @@
 
 .projects-container h1{
     text-align: left;
+    padding-left: 0;
+    padding-right: 0;
     margin-bottom: 30px;
 }
 
@@ -473,6 +509,8 @@
     vertical-align: top;
     display: inline-block;
     white-space: normal;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 .project-listing-container h3{
@@ -480,15 +518,17 @@
     font-size: 18px;
     line-height: 32px;
     margin: 10px;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 /*left responsive image container*/
 .project-img-left{
     display: inline-block;
     margin-top: 5px;
-    margin-right: 5px;
+    /*margin-right: 5px;*/
     margin-bottom: 5px;
-    padding: 5px;
+    padding: 0;
 }
 
 .project-img-left a img{
@@ -521,10 +561,10 @@
 .project-img-middle{
     display: inline-block;
     margin-top: 5px;
-    margin-right: 5px;
-    margin-left: 5px;
+    /*margin-right: 5px;
+    margin-left: 5px;*/
     margin-bottom: 5px;
-    padding: 5px;
+    padding: 0;
 }
 
 .project-img-middle a img{
@@ -557,9 +597,9 @@
 .project-img-right{
     display: inline-block;
     margin-top: 5px;
-    margin-left: 5px;
+    /*margin-left: 5px;*/
     margin-bottom: 5px;
-    padding: 5px;
+    padding: 0;
 }
 
 .project-img-right a img{
