--- a/assets/css/main-style.css
+++ b/assets/css/main-style.css
@@ -229,13 +229,27 @@ body{
     margin: 0;
     max-width: 100%;
     overflow-x: hidden;
+    text-align: center;    /*????????????????????????*/
+}
+@media screen and (min-width: 650px){
+    .content-container{
+        max-width: 100%;
+    }
+}
+@media screen and (max-width: 650px){
+    .content-container{
+        max-width: 90%;
+    }
 }
 
 .content-container{
-    max-width: 1200px;
-    margin-left: 3px;;
-    margin-right: 3px;
+    text-align: left;       /*????????????????????????*/
+    display: inline-block; /*????????????????????????*/
+    
+    /*margin-left: 3px;
+    margin-right: 3px;*/
     margin-left: auto;
     margin-right: auto;
     overflow-x: hidden;
+    
 }
